<resources>
    <string name="app_name">Single Screen</string>
    <string name="name">Toss It</string>
    <string name="intro">Order from your favorite restaurants &amp; track on the go, with Toss It.</string>
    <string name="caption">Restaurants in your pocket</string>
    <string name="address">4th Floor, Zone B, Asyst Park,\nPlot No. 37, Block- GN,\nSector-V, Salt Lake City, Bangalore – 560071</string>
    <string name="number">+91 7047621458</string>
    <string name="email">contact@tossit.co</string>
    <string name="web">www.tossit.co</string>
    <string name="time">10AM - 10PM Everyday</string>
    <string name="logo">logo</string>
    <string name="icon">icon</string>
</resources>
