<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark"
    tools:context="MainActivity">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_marginStart="24dp"
            android:layout_marginTop="16dp"
            android:text="@string/name"
            android:textAlignment="center"
            android:textColor="@color/text"
            android:textSize="34sp"
            android:textStyle="bold"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <ImageView
            android:id="@+id/img_toss"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:contentDescription="@string/logo"
            android:src="@drawable/tossit"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/name" />


        <TextView
            android:id="@+id/caption"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:text="@string/caption"
            android:textColor="@color/text"
            android:textSize="28sp"
            android:textStyle="bold"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/img_toss" />


        <TextView
            android:id="@+id/intro"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginTop="24dp"
            android:text="@string/intro"
            android:textAlignment="center"
            android:textColor="@color/text"
            android:textSize="18sp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/caption" />


        <ImageView
            android:id="@+id/phone_img"
            android:layout_width="18dp"
            android:layout_height="20dp"
            android:layout_marginEnd="10dp"
            android:layout_marginTop="24dp"
            android:contentDescription="@string/icon"
            android:src="@drawable/phone"
            app:layout_constraintRight_toLeftOf="@id/number"
            app:layout_constraintTop_toBottomOf="@id/intro" />

        <TextView
            android:id="@+id/number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_marginTop="24dp"
            android:autoLink="phone"
            android:paddingEnd="8dp"
            android:paddingStart="8dp"
            android:text="@string/number"
            android:textColor="@color/text"
            android:textSize="18sp"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/intro" />


        <ImageView
            android:id="@+id/email_img"
            android:layout_width="18dp"
            android:layout_height="20dp"
            android:layout_marginEnd="6dp"
            android:layout_marginTop="28dp"
            android:contentDescription="@string/icon"
            android:src="@drawable/email"
            app:layout_constraintRight_toLeftOf="@id/email"
            app:layout_constraintTop_toBottomOf="@id/number" />

        <TextView
            android:id="@+id/email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_marginTop="24dp"
            android:autoLink="email"
            android:paddingEnd="0dp"
            android:paddingStart="8dp"
            android:text="@string/email"
            android:textColor="@color/text"
            android:textSize="18sp"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/number" />


        <ImageView
            android:id="@+id/web_img"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_marginEnd="30dp"
            android:layout_marginTop="28dp"
            android:contentDescription="@string/icon"
            android:src="@drawable/home"
            app:layout_constraintRight_toLeftOf="@id/web"
            app:layout_constraintTop_toBottomOf="@id/email" />

        <TextView
            android:id="@+id/web"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_marginTop="24dp"
            android:autoLink="web"
            android:paddingEnd="8dp"
            android:paddingStart="8dp"
            android:text="@string/web"
            android:textColor="@color/text"
            android:textSize="18sp"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/email" />


        <ImageView
            android:id="@+id/add_img"
            android:layout_width="18dp"
            android:layout_height="20dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="34dp"
            android:contentDescription="@string/icon"
            android:src="@drawable/map"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/web" />

        <TextView
            android:id="@+id/address"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:layout_marginTop="28dp"
            android:autoLink="map"
            android:paddingLeft="8dp"
            android:paddingRight="8dp"
            android:text="@string/address"
            android:textColor="@color/text"
            android:textSize="18sp"
            app:layout_constraintLeft_toRightOf="@id/add_img"
            app:layout_constraintTop_toBottomOf="@id/web" />


        <ImageView
            android:id="@+id/time_img"
            android:layout_width="18dp"
            android:layout_height="18dp"
            android:layout_marginEnd="4dp"
            android:layout_marginTop="28dp"
            android:contentDescription="@string/icon"
            android:src="@drawable/access_time"
            app:layout_constraintRight_toLeftOf="@id/time"
            app:layout_constraintTop_toBottomOf="@id/address" />

        <TextView
            android:id="@+id/time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="24dp"
            android:layout_marginEnd="16dp"
            android:layout_marginTop="24dp"
            android:paddingEnd="0dp"
            android:paddingStart="8dp"
            android:text="@string/time"
            android:textColor="@color/text"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/address" />


    </android.support.constraint.ConstraintLayout>
</ScrollView>
